--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 bg-neutral-900 bg-gradient-to-r from-neutral-950 via-neutral-900 
 to-slate-900 text-white px-4 md:px-8 lg:px-12 py-6 md:py-10 lg:py-16 antialiased">
 
-  <div class="">
+  <div class="grid grid-cols-2 md:grid-cols-1 gap-20 w-full max-w-5xl px-4 md:px-2">
     <!-- TIME A -->
     <div>
       <h2>Time A</h2>
@@ -33,7 +33,7 @@ to-slate-900 text-white px-4 md:px-8 lg:px-12 py-6 md:py-10 lg:py-16 antialiased
       <button class="remove-one" data-team="A">-1</button>
     </div>
 
-    <button id="resetTudo">Reiniciar Placar</button>
+    
 
     <!-- TIME B -->
     <div>
@@ -55,6 +55,7 @@ to-slate-900 text-white px-4 md:px-8 lg:px-12 py-6 md:py-10 lg:py-16 antialiased
 
       <button class="remove-one" data-team="B">-1</button>
     </div>
+    <button id="resetTudo">Reiniciar Placar</button>
   </div>
 
   <script src="/src/scripts/script.js"></script>
