--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Placar Simples 2 Times</title>
 </head>
 
-<body class=" flex flex-col items-center min-h-screen 
-bg-neutral-900 bg-gradient-to-r from-neutral-950 via-neutral-900 
-to-slate-900 text-white px-4 md:px-8 lg:px-12 py-6 md:py-10 lg:py-16 antialiased">
+<body class="bg-[radial-gradient(circle_at_center,hsl(25_25%_20%)_0%,hsl(25_30%_8%)_100%)] flex items-center justify-center p4 min-h-screen">
 
-  <div class="grid grid-cols-2 md:grid-cols-1 gap-20 w-full max-w-5xl px-4 md:px-2">
+
+  <div class="max-w-md w-full p-8 md:p-6 card rounded-2xl shadow-2xl
+  grid grid-cols-1 md:grid-cols-2 gap-4">
     <!-- TIME A -->
-    <div>
+    <div class="bg-card/50">
       <h2>Time A</h2>
       <h3 id="placarA">0</h3>
 
@@ -33,10 +33,10 @@ to-slate-900 text-white px-4 md:px-8 lg:px-12 py-6 md:py-10 lg:py-16 antialiased
       <button class="remove-one" data-team="A">-1</button>
     </div>
 
-    
+
 
     <!-- TIME B -->
-    <div>
+    <div class="bg-card/50">
       <h2>Time B</h2>
       <h3 id="placarB">0</h3>
 
